fix: top vs center alignment responsiveness

--- a/src/components/timetable/timeTable.module.scss
+++ b/src/components/timetable/timeTable.module.scss
@@ -6,6 +6,10 @@
   flex-direction: row;
   height: 100%;
 
+  @media (max-height: 800px) {
+    align-items: flex-start;
+  }
+
   @media (max-width: 1024px) {
     width: 90%;
   }
